/*
 * StreamTeam
 * Copyright (C) 2019  University of Basel
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package streamTeam.football;

option java_package = "ch.unibas.dmi.dbis.streamTeam.dataStreamElements.protobuf.football";
option java_outer_classname = "AreaEventStreamElementPayloadProtos";

// Payload of an area event stream element
message AreaEventStreamElementPayload {

    bool inArea = 1; // Flag indicating if the object entered the area (and thus the areaEvent stream elements represents an area entry event) or left the area (and thus the areaEvent stream element represents an area leave event)

    string areaId = 2; // Identifier of the area
}

// Object identifiers, group identifiers and positions in the content:
// objectIdentifiers[0] = Identifier of the object (player or ball) who entered or left the area
// groupIdentifiers[0] = Identifier of the team whose object (player or ball) entered or left the area
// positions[0] = Position where the object (player or ball) entered or left the area